--- a/mobile-navbar.css
+++ b/mobile-navbar.css
@@ -12,26 +12,17 @@
 
 .navbar__list {
     list-style-type: none;
-    display: flex;
     justify-content: space-evenly;
-    align-items: center;
 }
 
 .navbar__item-container {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding-top: 24px;
     padding-bottom: 24px;
 }
 
 .navbar__item {
     width: max-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     gap: 8px;
 }
 
@@ -42,7 +33,7 @@
 
 .navbar__item--active .navbar__icon,
 .navbar__item--active .navbar__icon g {
-    fill: skyblue;
+    fill: #6495ed;
 }
 
 .svg-wrapper {
@@ -55,14 +46,14 @@
 
 .navbar__text {
     font-size: 14px;
+    font-weight: 500;
 }
 
 .navbar__item--active .navbar__text {
-    color: skyblue;
+    color: #6495ed;
 }
 
 .navbar__close-icon-container {
-    position: absolute;
     top: 4px;
     right: 8px;
     background-color: rgba(0, 0, 0, 0.1);
@@ -79,7 +70,7 @@
     height: 18px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 766px) {
     .navbar-container-mobile {
         display: block;
     }
